--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^4.6.0",
     "moment": "^2.29.1",
+    "ngx-infinite-scroll": "^10.0.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
